--- a/SadAgregator/View/cells/VendorRatingCell/VendorRatingTableViewCell.xib
+++ b/SadAgregator/View/cells/VendorRatingCell/VendorRatingTableViewCell.xib
@@ -10,15 +10,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="127" id="KGk-i7-Jjw" customClass="VendorRatingTableViewCell" customModule="SadAgregator" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="306" height="127"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="149" id="KGk-i7-Jjw" customClass="VendorRatingTableViewCell" customModule="SadAgregator" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="306" height="149"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="306" height="127"/>
+                <rect key="frame" x="0.0" y="0.0" width="306" height="149"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="6hz-6C-Vkj">
-                        <rect key="frame" x="224.5" y="43" width="65.5" height="44"/>
+                        <rect key="frame" x="224.5" y="43" width="65.5" height="70"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="BPV-YH-eiL">
                                 <rect key="frame" x="0.0" y="0.0" width="65.5" height="18"/>
@@ -58,10 +58,29 @@
                                     </label>
                                 </subviews>
                             </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="27g-oY-dtf">
+                                <rect key="frame" x="0.0" y="52" width="65.5" height="18"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="8" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="gnD-qc-jER">
+                                        <rect key="frame" x="0.0" y="1" width="22" height="15.5"/>
+                                        <color key="tintColor" red="0.79936379189999995" green="0.79947966339999998" blue="0.79933840040000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="18" id="4wR-Mb-koR"/>
+                                            <constraint firstAttribute="width" constant="22" id="9p4-uX-4rf"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" tag="9" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="GUJ-87-Pa0">
+                                        <rect key="frame" x="30" y="0.0" width="35.5" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
                     </stackView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n6O-qj-Ni4">
-                        <rect key="frame" x="0.0" y="126" width="306" height="1"/>
+                        <rect key="frame" x="0.0" y="148" width="306" height="1"/>
                         <color key="backgroundColor" red="0.86005309129999996" green="0.86005309129999996" blue="0.86005309129999996" alpha="0.77310756660000002" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="QZQ-Ck-Nk2"/>
@@ -97,11 +116,11 @@
                         </subviews>
                     </stackView>
                     <tableView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ed0-4L-15q">
-                        <rect key="frame" x="16" y="43" width="200.5" height="51"/>
+                        <rect key="frame" x="16" y="43" width="200.5" height="73"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tableView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kot-vY-Zfz">
-                        <rect key="frame" x="8" y="102" width="282" height="16"/>
+                        <rect key="frame" x="8" y="124" width="282" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -130,6 +149,8 @@
             <connections>
                 <outlet property="captLabel" destination="lwn-y1-Akf" id="Q0x-Le-4pd"/>
                 <outlet property="dateLabel" destination="Kot-vY-Zfz" id="gdH-xh-lcP"/>
+                <outlet property="imgsImageView" destination="gnD-qc-jER" id="jN9-Sk-tbP"/>
+                <outlet property="imgsLabel" destination="GUJ-87-Pa0" id="kBk-Oh-eqK"/>
                 <outlet property="nameLabel" destination="7MB-ph-eUI" id="3SJ-9j-45O"/>
                 <outlet property="peoplesImageView" destination="Eo4-aD-d7S" id="31Z-Xr-xKl"/>
                 <outlet property="peoplesLabel" destination="yZO-o1-lH3" id="OAN-KI-czG"/>
@@ -138,11 +159,12 @@
                 <outlet property="revLabel" destination="HxS-20-Dlb" id="lcp-Mr-TwX"/>
                 <outlet property="tableView" destination="Ed0-4L-15q" id="Ufx-J7-Jdq"/>
             </connections>
-            <point key="canvasLocation" x="50.724637681159422" y="130.24553571428572"/>
+            <point key="canvasLocation" x="66.666666666666671" y="130.91517857142856"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="person.fill.checkmark" catalog="system" width="128" height="88"/>
+        <image name="photo.fill" catalog="system" width="128" height="93"/>
         <image name="star.fill" catalog="system" width="128" height="116"/>
     </resources>
 </document>
