--- a/SadAgregator/View/cells/PostCell/CollectionViewCells/OptionCell/OptionCollectionViewCell.xib
+++ b/SadAgregator/View/cells/PostCell/CollectionViewCells/OptionCell/OptionCollectionViewCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -30,7 +31,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="124" height="34"/>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.89626395700000006" green="0.90821486709999999" blue="0.90771836039999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" name="gray"/>
                         <constraints>
                             <constraint firstItem="BTF-Rq-vFO" firstAttribute="leading" secondItem="LqG-aZ-LRz" secondAttribute="leading" constant="2" id="2px-8m-eiQ"/>
                             <constraint firstItem="BTF-Rq-vFO" firstAttribute="top" secondItem="LqG-aZ-LRz" secondAttribute="top" constant="2" id="OBn-CV-KEu"/>
@@ -60,4 +61,9 @@
             <point key="canvasLocation" x="-2.8985507246376816" y="137.27678571428569"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <namedColor name="gray">
+            <color red="0.960834682" green="0.96459835770000002" blue="0.97255879639999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        </namedColor>
+    </resources>
 </document>
