--- a/SadAgregator/View/cells/PostCell/CollectionViewCells/SizeCell/SizeCollectionViewCell.xib
+++ b/SadAgregator/View/cells/PostCell/CollectionViewCells/SizeCell/SizeCollectionViewCell.xib
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -26,7 +28,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.960834682" green="0.96459835770000002" blue="0.97255879639999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" name="gray"/>
                         <constraints>
                             <constraint firstItem="w34-kJ-BQC" firstAttribute="top" secondItem="VFl-Mb-Pj8" secondAttribute="top" constant="2" id="Fo1-8i-kr3"/>
                             <constraint firstItem="w34-kJ-BQC" firstAttribute="leading" secondItem="VFl-Mb-Pj8" secondAttribute="leading" constant="2" id="ZlU-x4-p8L"/>
@@ -51,4 +53,9 @@
             <point key="canvasLocation" x="152.17391304347828" y="138.61607142857142"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <namedColor name="gray">
+            <color red="0.960834682" green="0.96459835770000002" blue="0.97255879639999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        </namedColor>
+    </resources>
 </document>
