--- a/SadAgregator/View/cells/VendorRatingCell/VendorRatingTableViewCell.xib
+++ b/SadAgregator/View/cells/VendorRatingCell/VendorRatingTableViewCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -81,7 +82,7 @@
                     </stackView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n6O-qj-Ni4">
                         <rect key="frame" x="0.0" y="148" width="306" height="1"/>
-                        <color key="backgroundColor" red="0.86005309129999996" green="0.86005309129999996" blue="0.86005309129999996" alpha="0.77310756660000002" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" name="gray"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="QZQ-Ck-Nk2"/>
                         </constraints>
@@ -126,7 +127,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
-                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <color key="backgroundColor" name="whiteblack"/>
                 <constraints>
                     <constraint firstItem="Ed0-4L-15q" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="9Da-eO-ylO"/>
                     <constraint firstItem="n6O-qj-Ni4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="BTV-Is-idW"/>
@@ -166,5 +167,11 @@
         <image name="person.fill.checkmark" catalog="system" width="128" height="88"/>
         <image name="photo.fill" catalog="system" width="128" height="93"/>
         <image name="star.fill" catalog="system" width="128" height="116"/>
+        <namedColor name="gray">
+            <color red="0.960834682" green="0.96459835770000002" blue="0.97255879639999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        </namedColor>
+        <namedColor name="whiteblack">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
