--- a/SadAgregator/View/cells/EmptyCell/EmptyTableViewCell.xib
+++ b/SadAgregator/View/cells/EmptyCell/EmptyTableViewCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -31,7 +32,7 @@
                         </constraints>
                     </imageView>
                 </subviews>
-                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <color key="backgroundColor" name="whiteblack"/>
                 <constraints>
                     <constraint firstItem="7FI-ro-E5w" firstAttribute="top" secondItem="dNj-9V-nIW" secondAttribute="bottom" constant="16" id="VEW-P7-mLR"/>
                     <constraint firstItem="dNj-9V-nIW" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="Wai-gp-ZpC"/>
@@ -50,5 +51,8 @@
     </objects>
     <resources>
         <image name="openFolder" width="69" height="69"/>
+        <namedColor name="whiteblack">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
